# advent_of_code_2022

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
day1/: main.py
day2/: main.py
day3/: main.py
day4/: main.py
day5/: main.py
day6/: main.py
day8/: main.py
